--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "dRFEtools"
 packages = [
     {include = "dRFEtools"}
 ]
-version = "0.1.15"
+version = "0.1.16"
 description = "A package for preforming dynamic recursive feature elimination with sklearn."
 authors = ["Kynon JM Benjamin <kj.benjamin90@gmail.com>", "Apuã Paquola <apua.paquola@libd.org>"]
 maintainers = ["Kynon JM Benjamin <kj.benjamin90@gmail.com>"]
@@ -15,10 +15,10 @@ keywords = ['recursive feature elimination', 'sklearn', 'feature ranking']
 
 [tool.poetry.dependencies]
 python = ">=3.7.1"
-numpy = "1.20.1"
-pandas = "1.2.4"
-matplotlib = "3.3.4"
-plotnine = "0.7.1"
+numpy = "^1.20.1"
+pandas = "^1.2.4"
+matplotlib = "^3.3.4"
+plotnine = "^0.7.1"
 scikit-learn = "^1.0"
 scipy = "^1.6.0"
 statsmodels = "^0.12.2"
