--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ repository = "https://github.com/paquolalab/dRFEtools.git"
 keywords = ['recursive feature elimination', 'sklearn', 'feature ranking']
 
 [tool.poetry.dependencies]
-python = ">=3.7.1"
+python = "^3.7.1"
 numpy = "^1.20.1"
 pandas = "^1.2.4"
 matplotlib = "^3.3.4"
