--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "dRFEtools"
 packages = [
-    {include = "dRFEtools"}
+    {include = "drfetools"}
 ]
-version = "0.3.1"
+version = "0.3.2"
 description = "A package for preforming dynamic recursive feature elimination with sklearn."
 authors = ["Kynon JM Benjamin <kj.benjamin90@gmail.com>", "Apuã Paquola <apua.paquola@libd.org>"]
 maintainers = ["Kynon JM Benjamin <kj.benjamin90@gmail.com>"]
@@ -15,7 +15,7 @@ keywords = ['recursive feature elimination', 'sklearn', 'feature ranking']
 
 [tool.poetry.dependencies]
 python = "^3.8"
-numpy = "^1.24.0"
+numpy = "^1.20.0"
 pandas = "^2.0.2"
 matplotlib = "^3.7.0"
 plotnine = "^0.12.1"
