--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "dRFEtools"
 packages = [
-    {include = "drfetools"}
+    {include = "dRFEtools"}
 ]
 version = "0.3.2"
 description = "A package for preforming dynamic recursive feature elimination with sklearn."
@@ -27,6 +27,9 @@ statsmodels = "^0.14.0"
 pandas-plink = "^2.2.9"
 gtfparse = "^1.2.1"
 
+[tool.poetry-dynamic-versioning]
+enable = true
+
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
+build-backend = "poetry_dynamic_versioning.backend"
