--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ pandas-plink = "^2.2.9"
 gtfparse = "^1.2.1"
 
 [tool.poetry-dynamic-versioning]
-enable = true
+enable = false
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
