--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,7 +12,7 @@ build:
   jobs:
     post_create_environment:
       - pip install poetry
-      - pip install sphinx_autodoc_typehints sphinx-rtd-theme rfmix-reader
+      - pip install sphinx_autodoc_typehints sphinx-rtd-theme drfetools
     post_install:
       - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH
       - poetry install --with docs
