--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,43 +1,41 @@
-[build-system]
-requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
-build-backend = "poetry_dynamic_versioning.backend"
-
 [tool.poetry]
 name = "dRFEtools"
-packages = [
-    {include = "dRFEtools"}
-]
 version = "0.3.5"
-description = "A package for preforming dynamic recursive feature elimination with sklearn."
-authors = ["Kynon JM Benjamin <kj.benjamin90@gmail.com>", "Apuã Paquola <apua.paquola@libd.org>"]
+description = "Dynamic recursive feature elimination utilities built on scikit-learn."
+authors = [
+    "Kynon JM Benjamin <kj.benjamin90@gmail.com>",
+    "Apuã Paquola <apua.paquola@libd.org>"
+]
 maintainers = ["Kynon JM Benjamin <kj.benjamin90@gmail.com>"]
 license = "GPL-3.0-only"
 readme = "README.md"
-homepage = "https://drfetools.readthedocs.io/en/latest/index.html"
-repository = "https://github.com/LieberInstitute/dRFEtools.git"
-keywords = ['recursive feature elimination', 'sklearn', 'feature ranking']
+keywords = ["feature selection", "recursive feature elimination", "sklearn"]
+packages = [{ include = "dRFEtools" }]
 
 [tool.poetry.dependencies]
-python = "^3.10"
-numpy = "^2.0"
-pandas = "^2.0"
-matplotlib = "^3.7"
-plotnine = "^0.13"
-scikit-learn = "^1.2"
-scipy = "^1.14"
-statsmodels = "^0.14"
+python = ">=3.11,<4.0"
+numpy = ">=2.0"
+pandas = ">=2.0"
+matplotlib = ">=3.8"
+plotnine = ">=0.13"
+scikit-learn = ">=1.3"
+scipy = ">=1.11"
+statsmodels = ">=0.14"
 
-[tool.poetry.group.docs.dependencies]
-sphinx = "^7.3.7"
-sphinx-rtd-theme = "^2.0.0"
-sphinx-autodoc-typehints = "^2.1.0"
-torch = {version = "^2.3.1+cpu", source = "pytorch_cpu"}
-torchvision = {version = "^0.18.1+cpu", source = "pytorch_cpu"}
+[tool.poetry.urls]
+homepage = "https://drfetools.readthedocs.io"
+repository = "https://github.com/LieberInstitute/dRFEtools"
+"Bug Tracker" = "https://github.com/paquolalab/dRFEtools/issues"
+[build-system]
+requires = ["poetry-core>=1.8.0"]
+build-backend = "poetry.core.masonry.api"
 
-[[tool.poetry.source]]
-name = "pytorch_cpu"
-url = "https://download.pytorch.org/whl/cpu"
-priority = "explicit"
+[dependency-groups]
+docs = [
+    "sphinx>=7.3",
+    "sphinx-rtd-theme>=2.0",
+    "sphinx-autodoc-typehints>=2.1"
+]
 
 [tool.poetry-dynamic-versioning]
 enable = false
