--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,7 +1,5 @@
-# .readthedocs.yaml
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-# Adapted from: https://docs.readthedocs.io/en/stable/build-customization.html#install-dependencies-with-poetry
 
 version: 2
 
@@ -9,14 +7,12 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.11"
-  jobs:
-    post_create_environment:
-      - pip install poetry
-      - pip install sphinx_autodoc_typehints sphinx-rtd-theme drfetools
-    post_install:
-      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH
-      - poetry install --with docs
 
 sphinx:
   configuration: docs/conf.py
-  fail_on_warning: false
+
+python:
+   install:
+   - requirements: docs/requirements.txt
+   - method: pip
+     path: .
