--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,12 +34,10 @@ repository = "https://github.com/LieberInstitute/dRFEtools"
 requires = ["poetry-core>=1.8.0"]
 build-backend = "poetry.core.masonry.api"
 
-[dependency-groups]
-docs = [
-    "sphinx>=8",
-    "sphinx-rtd-theme>=2",
-    "sphinx-autodoc-typehints>=2"
-]
+[tool.poetry.group.docs.dependencies]
+sphinx = ">=8,<9"
+sphinx-rtd-theme = ">=2,<4"
+sphinx-autodoc-typehints = ">=2,<4"
 
 [tool.poetry-dynamic-versioning]
 enable = false
